<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NonVegLossFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non_veg_diet_plan_for_weight_loss"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="-20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_day_diet_plan_for_weight_loss"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#9e9e9e"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet_plan_weight_loss_non_Veg"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:src="@drawable/non_veg_weight_loss"
            />
    </LinearLayout>

</ScrollView>